--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 HOST=0.0.0.0
 PORT=1337
-APP_KEYS="toBeModified1,toBeModified2"
-API_TOKEN_SALT=tobemodified
-ADMIN_JWT_SECRET=tobemodified
+APP_KEYS=8S+zIDjUXT+TR3jy1Xnb2g==,jdQNnABio7HbM51AVnoTzQ==,lexSmDbQApm29AxBZ/oIaw==,a2idDr4ddj06Bq41GhTx0g==
+API_TOKEN_SALT=+p25Xnu9sCMdZshyvaHfMA==
+ADMIN_JWT_SECRET==D7kDOq3h9YtHd5hTkLHrlg==
 JWT_SECRET=tobemodified
+# Database
+DATABASE_CLIENT=sqlite
+DATABASE_FILENAME=.tmp/data.db
+JWT_SECRET=kN/9Pc4ps38lCiMfLW1Ewg==
+
