--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "better-sqlite3": "8.0.1",
     "lodash.set": "^4.3.2",
     "mime-types": "^2.1.27",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "strapi-plugin-ckeditor5": "^2.1.1-rc.1"
   },
   "name": "backend",
   "private": true,
